[package]
name = "compiler-v2"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
yaml-rust = "0.4.5"
wasm-encoder = { version = "0.221", features = ["component-model"] }
wasmparser = "0.221"

[dev-dependencies]
pretty_assertions = "1.4.1"
