[package]
name = "compiler-v2"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "generate-schema"
path = "schema/generate.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
yaml-rust = "0.4.5"
wasm-encoder = { version = "0.221", features = ["component-model"] }
wasmparser = "0.221"
schemars = "0.8.22"
serde_json = "1.0.140"

[dev-dependencies]
similar-asserts = "1.7.0"
